<?xml version="1.0"?>
<package format="2">
    <name>MINT</name>
    <version>0.0.0</version>
    <description>OMPL implementation of MINT</description>
    <author email="rajatkj@uw.edu">Rajat Kumar Jenamani</author>
    <maintainer email="rajatkj@uw.edu"></maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>ompl</depend>
    <depend>boost</depend>
    <depend>eigen</depend>
</package>
